maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:13: error: not found: value keeHandOnWallSide
      case 1 => keeHandOnWallSide()
                ^